package NYT.NQueryClient.NProto;

import "yt/core/misc/guid.proto";
import "yt/ytlib/query_client/operator.proto";

////////////////////////////////////////////////////////////////////////////////

message TPlanFragment
{
    required TOperator head = 1;
    required NYT.NProto.TGuid id = 2;
    required uint64 timestamp = 3;
}

////////////////////////////////////////////////////////////////////////////////

